@@ -16,13 +16,18 @@
 #[command(version, about)]
 struct Opt {
     /// Input file.
+    ///
+    /// If [FILE] is not specified, data will be read from stdin.
     #[arg(value_name("FILE"))]
-    input: std::path::PathBuf,
+    input: Option<std::path::PathBuf>,
 }
 
 #[cfg(feature = "std")]
 fn main() -> anyhow::Result<()> {
-    use std::fs;
+    use std::{
+        fs,
+        io::{self, Read},
+    };
 
     use abcrypt::Params;
     use anyhow::Context;
@@ -30,8 +35,15 @@ fn main() -> anyhow::Result<()> {
 
     let opt = Opt::parse();
 
-    let ciphertext = fs::read(&opt.input)
-        .with_context(|| format!("could not read data from {}", opt.input.display()))?;
+    let ciphertext = if let Some(file) = opt.input {
+        fs::read(&file).with_context(|| format!("could not read data from {}", file.display()))
+    } else {
+        let mut buf = Vec::new();
+        io::stdin()
+            .read_to_end(&mut buf)
+            .context("could not read data from stdin")?;
+        Ok(buf)
+    }?;
 
     let params = Params::new(ciphertext).context("data is not a valid abcrypt encrypted file")?;
     println!(
